--- a/custom_components/deyecloud/manifest.json
+++ b/custom_components/deyecloud/manifest.json
@@ -1,7 +1,7 @@
 {
   "domain": "deyecloud",
-  "name": "Deye Cloud",
-  "version": "1.0.5",
+  "name": "Fuuuuckyou Tony Tong Deye Cloud",
+  "version": "1.0.6",
   "documentation": "https://github.com/heavenknows1978/hass-deyecloud",
   "dependencies": [],
   "codeowners": ["@heavenknows1978"],
